# rive

./: .woodpecker.yml  Cargo.toml  Justfile  README.md
.forgejo/workflows/: check.yaml
.github/workflows/: documentation.yaml
examples/: Cargo.toml  file-download.rs  file-upload.rs  in-memory-cache.rs  ping-pong.rs
revolt/: Cargo.toml
revolt-gateway/: Cargo.toml
revolt-gateway/src/: lib.rs
revolt-http/: Cargo.toml
revolt-http/src/: lib.rs
revolt-http/src/channels/: channel_invites.rs
revolt-http/src/customisation/: emojis.rs  mod.rs
revolt-http/src/invites/: invites.rs  mod.rs
revolt-http/src/miscellaneous/: sync.rs  web_push.rs
revolt-http/src/servers/: mod.rs  server_permissions.rs
revolt-models/: Cargo.toml
revolt-models/src/: bot.rs  channel.rs  error.rs  event.rs  invite.rs  lib.rs  payload.rs  permission.rs  server.rs  user.rs
revolt-util/src/builders/: message.rs
rive/: CHANGELOG.md  Cargo.toml  README.md
rive-autumn/: CHANGELOG.md  Cargo.toml  README.md
rive-autumn/src/: lib.rs
rive-cache-inmemory/: CHANGELOG.md  Cargo.toml  README.md
rive-cache-inmemory/src/: builder.rs  config.rs  iter.rs  lib.rs  patch.rs  reference.rs  remove.rs  stats.rs  update.rs  util.rs
rive-gateway/: CHANGELOG.md  Cargo.toml  README.md
rive-gateway/src/: builder.rs  config.rs  error.rs  lib.rs
rive-http/: CHANGELOG.md  Cargo.toml  README.md
rive-http-new/: Cargo.toml
rive-http-new/src/: client.rs  config.rs  connector.rs  error.rs  lib.rs
rive-http-new/src/base/request/: builder.rs  mod.rs  request.rs  route.rs
rive-http-new/src/base/response/: mod.rs  response.rs
rive-http-new/src/request/channels/messaging/: mod.rs  send_message.rs
rive-http/src/: lib.rs
rive-http/src/authentication/: account.rs  mfa.rs  mod.rs  onboarding.rs  session.rs
rive-http/src/bots/: bots.rs  mod.rs
rive-http/src/channels/: channel_information.rs  channel_invites.rs  channel_permissions.rs  groups.rs  interactions.rs  messaging.rs  mod.rs  voice.rs  webhooks.rs
rive-http/src/customisation/: emojis.rs
rive-http/src/invites/: invites.rs
rive-http/src/miscellaneous/: mod.rs  sync.rs  web_push.rs
rive-http/src/platform_administration/: admin.rs  mod.rs  user_safety.rs
rive-http/src/revolt/: core.rs
rive-http/src/servers/: mod.rs  server_information.rs  server_members.rs  server_permissions.rs
rive-http/src/users/: direct_messaging.rs  relationships.rs  user_information.rs
rive-models/: CHANGELOG.md  Cargo.toml  README.md
rive-models/src/: account.rs  attachment.rs  authentication.rs  autumn.rs  bot.rs  channel.rs  core.rs  data.rs  embed.rs  emoji.rs  error.rs  event.rs  invite.rs  lib.rs  member.rs  message.rs  mfa.rs  onboarding.rs  payload.rs  permission.rs  report.rs  server.rs  session.rs  snapshot.rs  stats.rs  strike.rs  user.rs  webhook.rs
rive-models/src/id/: marker.rs  mod.rs
rive-standby/: Cargo.toml  README.md
rive-standby/src/: event.rs  lib.rs
rive-util/: Cargo.toml
rive-util/src/builders/: message.rs
rive-util/src/extensions/: builder.rs
rive/src/: lib.rs
