[workspace]
resolver = "2"
members = [
    "examples",
    "rive",
    "rive-models",
    "rive-http",
    "rive-http-new",
    "rive-gateway",
    "rive-autumn",
    "rive-cache-inmemory",
    "rive-standby",
]

[workspace.package]
authors = ["Rive contributors"]
edition = "2021"
license = "LGPL-2.1-or-later"
repository = "https://github.com/tuhana/rive"
rust-version = "1.64"
keywords = ["revolt", "revolt-api", "rive"]
