[package]
name = "revolt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }
revolt-models = { path = '../revolt-models' }
serde_json = "1.0"
futures = "0.3"
thiserror = "1.0.39"
