[package]
name = "rive-autumn"
description = "Autumn API client for Rive ecosystem."
categories = ["api-bindings"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
rive-models = { path = "../rive-models", version = "1" }
futures = "0.3"
tokio = "1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"] }
serde = "1"
serde_json = "1"
thiserror = "1"
