[package]
name = "rive-autumn"
description = "Autumn API client for Rive ecosystem."
categories = ["api-bindings"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream"] }
rive-models = { path = "../rive-models", version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec", "io"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
