[package]
name = "rive-autumn"
description = "Autumn API client for Rive ecosystem."
categories = ["api-bindings"]
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.5", default-features = false, features = [
  "json",
  "multipart",
  "stream",
] }
rive-models = { path = "../rive-models", version = "1", default-features = false }
thiserror = "1.0.63"
tokio = "1.39.2"
tokio-util = { version = "0.7.11", features = ["codec", "io"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
