[package]
name = "rive-cache-inmemory"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
dashmap = "5.5"
rive-models = { version = "1", path = "../rive-models" }
