[package]
name = "rive-cache-inmemory"
description = "In-memory cache for Rive."
categories = ["caching"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
rive-models = { path = "../rive-models", version = "1" }
dashmap = "6.0.1"

[dev-dependencies]
# this is needed for examples in docstrings to pass compilation tests
futures = "0.3.30"
rive-gateway = { path = "../rive-gateway", version = "1", default-features = false }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
