[package]
name = "rive-gateway"
description = "Revolt WebSocket API implementaion for the Rive ecosystem."
categories = ["api-bindings"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
async-channel = "1.8"
futures = "0.3"
rive-models = { path = "../rive-models", version = "1", default-features = false }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-tungstenite = "0.17"

[features]
default = ["native-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
