[package]
name = "rive-gateway"
description = "Revolt WebSocket API implementaion for the Rive ecosystem."
categories = ["api-bindings"]
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
async-channel = "1.8"
futures = "0.3"
http = "0.2"
rive-models = { path = "../rive-models", version = "1", default-features = false }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tokio-websockets = { version = "0.4", features = ["client", "fastrand"] }
tracing = "0.1"

[dev-dependencies]
# this is needed for examples in docstrings to pass compilation tests
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = ["native-tls"]
native-tls = ["tokio-websockets/native-tls", "tokio-websockets/openssl"]
rustls-tls-native-roots = ["tokio-websockets/rustls-native-roots"]
rustls-tls-webpki-roots = ["tokio-websockets/rustls-webpki-roots"]
