[package]
name = "rive-http-new"
description = "Revolt REST API client for the Rive ecosystem."
categories = ["api-bindings"]
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-tls = { version = "0.6", optional = true }
hyper-rustls = { version = "0.26", default-features = false, features = ["ring", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
rive-models = { path = "../rive-models", version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net"] }

[features]
default = ["rustls-webpki-roots"]
native = ["dep:hyper-tls"]
rustls-native-roots = ["dep:hyper-rustls", "hyper-rustls?/native-tokio"]
rustls-webpki-roots = ["dep:hyper-rustls", "hyper-rustls?/webpki-tokio"]
