[package]
name = "rive-http"
description = "Revolt REST API client for the Rive ecosystem."
categories = ["api-bindings"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
async-trait = { version = "0", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rive-models = { path = "../rive-models", version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "1", default-features = false }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
