[package]
name = "rive-http"
description = "Revolt REST API client for the Rive ecosystem."
categories = ["api-bindings"]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
rive-models = { path = "../rive-models", version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
