[package]
name = "rive-models"
description = "Revolt API models for the Rive ecosystem."
categories = ["data-structures"]
version = "1.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
bitflags = { version = "2.0.0-rc.3", default-features = false }
iso8601-timestamp = { version = "0.2", default-features = false, features = ["std", "serde", "lookup"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
