[package]
name = "rive-models"
description = "Revolt API models for the Rive ecosystem."
categories = ["data-structures"]
version = "1.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
bitflags = "2"
iso8601-timestamp = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
