[package]
name = "rive-models"
description = "Revolt API models for the Rive ecosystem."
categories = ["data-structures"]
version = "1.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
bitflags = "2.6.0"
iso8601-timestamp = "0.2.17"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[dev-dependencies]
serde_test = "1.0.177"
static_assertions = "1.1.0"
