[package]
name = "rive-standby"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
rive-models = { path = "../rive-models", version = "1", default-features = false }
tokio = { version = "1", features = ["sync"] }
