[package]
name = "rive-standby"
description = "Utility to wait for a specific event for the Rive ecosystem."
categories = [ "asynchronous" ]
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
rive-models = { path = "../rive-models", version = "1", default-features = false }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
# this is needed for examples in docstrings to pass compilation tests
rive-gateway = { path = "../rive-gateway", version = "1" }
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
