[package]
name = "rive"
description = "The Rive ecosystem crate."
categories = ["api-bindings", "data-structures"]
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
rive-models = { path = "../rive-models", version = "1" }
rive-gateway = { path = "../rive-gateway", version = "1" }
rive-http = { path = "../rive-http", version = "1" }
rive-autumn = { path = "../rive-autumn", version = "1" }
futures = "0.3"
