[package]
name = "rive"
description = "The Rive ecosystem crate."
categories = ["api-bindings", "data-structures"]
version = "1.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true

[dependencies]
futures = "0.3"
rive-models = { path = "../rive-models", version = "1" }
rive-gateway = { path = "../rive-gateway", version = "1" }
rive-http = { path = "../rive-http", version = "1" }
rive-autumn = { path = "../rive-autumn", version = "1" }
rive-cache-inmemory= { path = "../rive-cache-inmemory", version = "1" }

[features]
default = ["native-tls"]
native-tls = ["rive-http/native-tls", "rive-gateway/native-tls", "rive-autumn/native-tls"]
rustls-tls-native-roots = ["rive-http/rustls-tls-native-roots", "rive-gateway/rustls-tls-native-roots", "rive-autumn/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["rive-http/rustls-tls-webpki-roots", "rive-gateway/rustls-tls-webpki-roots", "rive-autumn/rustls-tls-webpki-roots"]
